hphp/test/zend/good/bug27598.php
<?php
list($out[0]) = array(1);
var_dump($out);
?>